Get users grouped by roles, closes #4
