# routes/api.php
@@ -3,6 +3,7 @@
 use App\Helpers\ApiResponse;
 use App\Http\Controllers\Api\V1\LeadController;
 use App\Http\Controllers\Api\V1\LeadPathController;
+use App\Http\Controllers\Api\V1\UserController;
 use App\Http\Middleware\IdempotencyKey;
 use App\Http\Middleware\RequireIdempotencyKey;
 use Illuminate\Http\Request;
@@ -53,6 +54,11 @@ Route::prefix('v1')->middleware('auth:sanctum')->group(function () {
         ]);
 
     Route::patch('leads/{id}', [LeadController::class, 'update']);
+});
+
+Route::prefix('v1')->middleware('auth:sanctum')->group(function () {
+    Route::get('/users/by-roles', [UserController::class, 'groupedByRoles'])
+    ->middleware(['role:super-admin']);
 });
 
 
